// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`launch and retained error details at 110x32: launch 1`] = `
"                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
  rottweiler                                                                                                  
  Workspace · not loaded                                                                                      
  Instructions · not loaded                                                                                   
  MCP · not loaded                                                                                            
  Skill commands · not loaded                                                                                 
  Model · Choose a model · /models · /providers to connect                                                    
  Describe a task, or press / for commands.                                                                   
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
 ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────╮ 
 │ Describe a task…                                                                                         │ 
 │ Ctrl+P commands   Alt+M model   / @ !   Ctrl+E editor    ⏎  send                                         │ 
 ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────╯ 
  EXECUTE   model not selected · Alt+M                                                                        
"
`;

exports[`launch and retained error details at 110x32 1`] = `
"╭─ Error 1 · details ────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                            │
│ type to filter…                                                                                            │
│                                                                                                            │
│  ▶ Back to recent errors                                                                                   │
│    Retained for this session · no automatic retry                                                          │
│    Something went wrong · Provider rejected the selected context length                                    │
│    error · provider · provider_failed                                                                      │
│    Requires attention                                                                                      │
│    Review these details before continuing                                                                  │
│    Provider rejected the selected context length                                                           │
│                                                                                                            │
│                                                                                                            │
│                                                                                                            │
│                                                                                                            │
│                                                                                                            │
│                                                                                                            │
│                                                                                                            │
│                                                                                                            │
│                                                                                                            │
│                                                                                                            │
│                                                                                                            │
│                                                                                                            │
│                                                                                                            │
│                                                                                                            │
│                                                                                                            │
╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────╮ 
 │ Describe a task…                                                                                         │ 
 │ Ctrl+P commands   Alt+M model   / @ !   Ctrl+E editor    ⏎  send                                         │ 
 ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────╯ 
  EXECUTE   model not selected · Alt+M                                                                        
"
`;

exports[`launch and retained error details at 80x24: launch 1`] = `
"                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  rottweiler                                                                    
  Workspace · not loaded                                                        
  Instructions · not loaded                                                     
  MCP · not loaded                                                              
  Skill commands · not loaded                                                   
  Model · Choose a model · /models · /providers to connect                      
  Describe a task, or press / for commands.                                     
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 ╭────────────────────────────────────────────────────────────────────────────╮ 
 │ Describe a task…                                                           │ 
 │ Ctrl+P commands   Alt+M model   / @ !   Ctrl+E editor    ⏎  send           │ 
 ╰────────────────────────────────────────────────────────────────────────────╯ 
  EXECUTE   model not selected · Alt+M                                          
"
`;

exports[`launch and retained error details at 80x24 1`] = `
"╭─ Error 1 · details ──────────────────────────────────────────────────────────╮
│                                                                              │
│ type to filter…                                                              │
│                                                                              │
│  ▶ Back to recent errors                                                     │
│    Retained for this session · no automatic retry                            │
│    Something went wrong · Provider rejected the selected context length      │
│    error · provider · provider_failed                                        │
│    Requires attention                                                        │
│    Review these details before continuing                                    │
│    Provider rejected the selected context length                             │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
 ╭────────────────────────────────────────────────────────────────────────────╮ 
 │ Describe a task…                                                           │ 
 │ Ctrl+P commands   Alt+M model   / @ !   Ctrl+E editor    ⏎  send           │ 
 ╰────────────────────────────────────────────────────────────────────────────╯ 
  EXECUTE   model not selected · Alt+M                                          
"
`;
